@@ -166,6 +166,20 @@ name|apache
 operator|.
 name|hadoop
 operator|.
+name|io
+operator|.
+name|Text
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
 name|security
 operator|.
 name|Credentials
@@ -183,6 +197,20 @@ operator|.
 name|security
 operator|.
 name|ProviderUtils
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|security
+operator|.
+name|SecurityUtil
 import|;
 end_import
 
@@ -431,6 +459,16 @@ operator|.
 name|net
 operator|.
 name|HttpURLConnection
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|net
+operator|.
+name|InetSocketAddress
 import|;
 end_import
 
@@ -4793,7 +4831,35 @@ name|?
 argument_list|>
 index|[]
 name|tokens
+init|=
+literal|null
 decl_stmt|;
+name|Text
+name|dtService
+init|=
+name|getDelegationTokenService
+argument_list|()
+decl_stmt|;
+name|Token
+argument_list|<
+name|?
+argument_list|>
+name|token
+init|=
+name|credentials
+operator|.
+name|getToken
+argument_list|(
+name|dtService
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|token
+operator|==
+literal|null
+condition|)
+block|{
 name|URL
 name|url
 init|=
@@ -4819,12 +4885,8 @@ argument_list|)
 decl_stmt|;
 try|try
 block|{
-name|Token
-argument_list|<
-name|?
-argument_list|>
 name|token
-init|=
+operator|=
 name|authUrl
 operator|.
 name|getDelegationToken
@@ -4835,7 +4897,7 @@ name|authToken
 argument_list|,
 name|renewer
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 if|if
 condition|(
 name|token
@@ -4893,8 +4955,57 @@ name|ex
 argument_list|)
 throw|;
 block|}
+block|}
 return|return
 name|tokens
+return|;
+block|}
+DECL|method|getDelegationTokenService ()
+specifier|private
+name|Text
+name|getDelegationTokenService
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|URL
+name|url
+init|=
+operator|new
+name|URL
+argument_list|(
+name|kmsUrl
+argument_list|)
+decl_stmt|;
+name|InetSocketAddress
+name|addr
+init|=
+operator|new
+name|InetSocketAddress
+argument_list|(
+name|url
+operator|.
+name|getHost
+argument_list|()
+argument_list|,
+name|url
+operator|.
+name|getPort
+argument_list|()
+argument_list|)
+decl_stmt|;
+name|Text
+name|dtService
+init|=
+name|SecurityUtil
+operator|.
+name|buildTokenService
+argument_list|(
+name|addr
+argument_list|)
+decl_stmt|;
+return|return
+name|dtService
 return|;
 block|}
 comment|/**    * Shutdown valueQueue executor threads    */
