@@ -58,6 +58,50 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|security
+operator|.
+name|Credentials
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|security
+operator|.
+name|UserGroupInformation
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|security
+operator|.
+name|token
+operator|.
+name|Token
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|junit
 operator|.
 name|After
@@ -86,11 +130,31 @@ end_import
 
 begin_import
 import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|Test
+import|;
+end_import
+
+begin_import
+import|import
 name|java
 operator|.
 name|io
 operator|.
 name|File
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Arrays
 import|;
 end_import
 
@@ -236,6 +300,140 @@ name|miniKMS
 operator|.
 name|stop
 argument_list|()
+expr_stmt|;
+block|}
+annotation|@
+name|Override
+DECL|method|setProvider ()
+specifier|protected
+name|void
+name|setProvider
+parameter_list|()
+block|{   }
+annotation|@
+name|Test
+argument_list|(
+name|timeout
+operator|=
+literal|120000
+argument_list|)
+DECL|method|testDelegationToken ()
+specifier|public
+name|void
+name|testDelegationToken
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+specifier|final
+name|String
+name|renewer
+init|=
+literal|"JobTracker"
+decl_stmt|;
+name|UserGroupInformation
+operator|.
+name|createRemoteUser
+argument_list|(
+name|renewer
+argument_list|)
+expr_stmt|;
+name|Credentials
+name|creds
+init|=
+operator|new
+name|Credentials
+argument_list|()
+decl_stmt|;
+name|Token
+argument_list|<
+name|?
+argument_list|>
+name|tokens
+index|[]
+init|=
+name|fs
+operator|.
+name|addDelegationTokens
+argument_list|(
+name|renewer
+argument_list|,
+name|creds
+argument_list|)
+decl_stmt|;
+name|DistributedFileSystem
+operator|.
+name|LOG
+operator|.
+name|debug
+argument_list|(
+literal|"Delegation tokens: "
+operator|+
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|tokens
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|tokens
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|creds
+operator|.
+name|numberOfTokens
+argument_list|()
+argument_list|)
+expr_stmt|;
+comment|// If the dt exists, will not get again
+name|tokens
+operator|=
+name|fs
+operator|.
+name|addDelegationTokens
+argument_list|(
+name|renewer
+argument_list|,
+name|creds
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|0
+argument_list|,
+name|tokens
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|creds
+operator|.
+name|numberOfTokens
+argument_list|()
+argument_list|)
 expr_stmt|;
 block|}
 block|}
